# ai-commit

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  formula_template.rb
crates/commands/: Cargo.toml
crates/commands/src/: git.rs  lib.rs
src/: main.rs  settings.rs
src/ai/: client.rs  models.rs
