[package]
name = "ai-commit"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
commands = { path = "./crates/commands" }
config = "0.15.11"
xdg = "2.5.2"
inquire = "0.7.5"

[workspace]
members = [
  "./crates/commands"
]

[build-dependencies]
regex = "1.11.1"
